[package]
name = "tablerust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.1.8", features = ["web"] }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24.0"
