[package]
name = "docs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tablerust = { path = ".." }
dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["web", "router"] }
log = "0.4.14"